src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --breakpoint-xs: 480px;
  --breakpoint-sm: 660px;
  --breakpoint-md: 840px;
  --breakpoint-lg: 1024px;
  --text-md: 1.0625rem;
  --text-h1: 2.125rem;
  --text-h2: 1.75rem;
  --text-h3: 1.375rem;
  --text-15: 0.9375rem;
  --text-26: 1.625rem;
  --border-width-1\.5: 1.5px;
  --radius-3xl: 1.25rem;
  --radius-4xl: 1.5rem;
}

@utility webkit-autofil-color-for-dark {
  -webkit-text-fill-color: oklch(92% 0.004 286.32);
}

@utility webkit-autofil-color-for-light {
  -webkit-text-fill-color: oklch(27.4% 0.006 286.033);
}

@utility heading-color {
  @apply text-zinc-800 dark:text-zinc-200;
}

@utility text-color {
  @apply text-zinc-600 dark:text-zinc-400;
}

@utility border-color {
  @apply border-zinc-300/70 dark:border-zinc-800;
}

@utility border-focus {
  @apply border-zinc-400 dark:border-zinc-600;
}

@utility bg-default {
  @apply bg-zinc-100 dark:bg-zinc-900;
}

@utility bg-primary {
  @apply bg-zinc-200/50 dark:bg-zinc-800/50;
}

@utility bg-secondary {
  @apply bg-zinc-200 dark:bg-zinc-800;
}

@utility bg-warning {
  @apply text-yellow-800 dark:text-yellow-500 bg-yellow-500/20 dark:bg-yellow-500/10;
}

@utility bg-input {
  @apply bg-white dark:bg-zinc-950/30;
}

@utility icon-btn {
  @apply text-color hover:heading-color transition-all duration-300;
}

@utility icon-btn-bg {
  @apply shrink-0 icon-btn sm:size-10 size-9 flex items-center justify-center rounded-xl hover:bg-primary;
}

@utility scrollbar-thin {
  scrollbar-width: thin;
}

@layer base {
  .dark {
    color-scheme: dark;
  }

  html {
    @apply scrollbar-thin;
  }

  ::selection {
    @apply bg-teal-500 text-zinc-800;
  }

  body {
    @apply text-color bg-default w-full relative overflow-x-hidden box-border;
  }

  .root {
    @apply w-full min-h-dvh relative flex flex-col items-center;
  }

  .page-main {
    @apply w-full relative flex flex-col items-center justify-center flex-1 sm:px-5 px-4;
  }

  button,
  a {
    cursor: pointer;
  }

  input:autofill,
  input:-webkit-autofill:hover,
  input:-webkit-autofill:focus,
  input:-webkit-autofill:active {
    @apply webkit-autofil-color-for-light dark:webkit-autofil-color-for-dark;
    transition: background-color 100000s ease-in-out 0s;
    box-shadow: none;
  }
}

@layer components {
  .icon-btn svg {
    @apply w-5;
  }

  .icon-btn-bg svg {
    @apply w-5.5;
  }

  .icon-btn-bg-sm {
    @apply icon-btn-bg sm:size-8 size-8;
  }

  .icon-btn-bg-sm svg {
    @apply w-5;
  }

  .h1 {
    @apply md:text-h1 sm:text-3xl text-h2 font-semibold leading-snug heading-color;
  }

  .h2 {
    @apply md:text-h2 sm:text-2xl text-h3 font-medium leading-snug heading-color;
  }

  .h3 {
    @apply lg:text-h3 sm:text-xl text-lg font-medium leading-snug heading-color;
  }

  .h4 {
    @apply sm:text-lg text-md font-medium leading-snug heading-color;
  }

  .input {
    @apply w-full flex items-center h-13 p-4 outline-none transition-all duration-300 heading-color bg-input border border-color focus:border-focus rounded-2xl placeholder:text-zinc-500;
  }

  .mnemonic-word-input {
    @apply w-full flex items-center gap-1 p-3 h-12 leading-none heading-color bg-input border border-color focus-within:border-focus rounded-xl;
  }

  .box {
    @apply w-full max-w-md relative flex flex-col items-center gap-4 text-center border-1.5 border-color rounded-3xl;
  }

  .hero {
    @apply w-full flex flex-col text-center sm:gap-6 gap-5 items-center bg-primary md:py-16 sm:py-13 py-10 md:px-12 sm:px-9 px-6 rounded-4xl relative overflow-hidden before:content-[''] before:pointer-events-none before:absolute before:top-0 before:right-0 md:before:size-32 sm:before:size-28 before:size-24 before:bg-teal-500/10 before:rounded-bl-full after:content-[''] after:pointer-events-none after:absolute after:bottom-0 after:left-0 md:after:size-48 sm:after:size-42 after:size-36 after:bg-teal-500/5 after:rounded-tr-full;
  }
}

